# stonkbot-v2

./: .gitignore  Cargo.toml  LICENSE
common/: Cargo.toml
common/src/: config.rs  lib.rs  mwu.rs  util.rs
engine/: Cargo.toml
engine/src/: logging.rs  main.rs
engine/src/engine/: engine_impl.rs  entry.rs  kelly.rs  mod.rs  orders.rs  portfolio.rs  positions.rs  stat.rs  tax.rs  trailing.rs
engine/src/event/: clock.rs  command.rs  mod.rs  stream.rs
engine/src/portfolio/: api.rs  long.rs  mod.rs  mwu.rs
entity/: Cargo.toml
entity/src/: data.rs  stream.rs  trading.rs
history/: Cargo.toml
history/src/: api.rs  legacy.rs  lib.rs
rest/: Cargo.toml
rest/src/: lib.rs  rate_limit.rs
src/: config.rs  engine.rs  logging.rs  main.rs  rest.rs  util.rs
src/engine/: engine_impl.rs  entry.rs  heuristic.rs  kelly.rs  mod.rs  orders.rs  portfolio.rs  positions.rs  trailing.rs
src/entity/: data.rs  mod.rs  stream.rs  trading.rs
src/event/: clock.rs  command.rs  mod.rs  stream.rs
src/history/: api.rs  legacy.rs  mod.rs
