[package]
name = "stonkbot-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
flate2 = "1.0.24"
log = "0.4.17"
once_cell = "1.13.0"
rustyline = "10.0.0"
serde_json = "1.0.82"
termion = "1.5.6"

[dependencies.log4rs]
version = "1.1.1"
default-features = false
features = [
    "compound_policy",
    "console_appender",
    "rolling_file_appender",
    "size_trigger"
]

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["rustls-tls-webpki-roots"]

[dependencies.rust_decimal]
version = "1.25.0"
default-features = false
features = ["serde-arbitrary-precision"]

[dependencies.serde]
version = "1.0.140"
features = ["derive"]

[dependencies.time]
version = "0.3.11"
features = [
    "serde",
    "local-offset",
    "formatting",
    "serde-well-known"
]

[dependencies.tokio]
version = "1.20.1"
default-features = false
features = [
    "net",
    "rt",
    "sync",
    "time"
]

[dependencies.uuid]
version = "1.1.2"
features = ["serde"]
