[package]
name = "stonkbot-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.57"
flate2 = "1.0.24"
futures = "0.3.21"
log = "0.4.17"
num-traits = "0.2.15"
once_cell = "1.13.0"
rayon = "1.5.3"
rustyline = "10.0.0"
serde_json = "1.0.82"
serde_with = "2.0.0"
termion = "1.5.6"

[dependencies.log4rs]
version = "1.1.1"
default-features = false
features = [
    "compound_policy",
    "console_appender",
    "rolling_file_appender",
    "size_trigger"
]

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["rustls-tls-webpki-roots"]

[dependencies.rust_decimal]
version = "1.25.0"
default-features = false
features = ["serde-with-arbitrary-precision", "serde-with-float", "maths"]

[dependencies.serde]
version = "1.0.140"
features = ["derive"]

[dependencies.sqlx]
version = "0.6.1"
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.stock-symbol]
version = "0.3.0"
features = ["serde", "sqlx"]

[dependencies.time]
version = "0.3.11"
features = [
    "serde",
    "local-offset",
    "formatting",
    "serde-well-known"
]

[dependencies.tokio]
version = "1.20.1"
default-features = false
features = [
    "net",
    "rt",
    "sync",
    "time"
]

[dependencies.tokio-tungstenite]
version = "0.17.2"
features = ["rustls-tls-webpki-roots"]

[dependencies.uuid]
version = "1.1.2"
features = ["serde"]

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
codegen-units = 1

[profile.perf]
inherits = "release"
debug = 2
strip = "none"
