[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
log = "0.4.17"
num-traits = "0.2.15"
once_cell = "1.13.0"
serde_json = "1.0.82"

[dependencies.rust_decimal]
version = "1.25.0"
default-features = false
features = ["serde-with-arbitrary-precision"]

[dependencies.serde]
version = "1.0.140"
features = ["derive"]

[dependencies.stock-symbol]
version = "0.3.0"
features = ["serde"]

[dependencies.time]
version = "0.3.11"
features = [
    "serde",
    "local-offset",
    "formatting",
]
