[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
log = "0.4.20"
once_cell = "1.19.0"
serde_json = "1.0.108"

[dependencies.rust_decimal]
version = "1.25.0"
default-features = false
features = ["serde-with-arbitrary-precision"]

[dependencies.serde]
version = "1.0.140"
features = ["derive"]

[dependencies.stock-symbol]
version = "0.5.0"
features = ["serde"]

[dependencies.time]
version = "0.3.11"
features = ["serde", "local-offset", "formatting"]
