[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
entity = { path = "../entity" }
history = { path = "../history" }
rest = { path = "../rest" }
anyhow = "1.0.76"
flate2 = "1.0.28"
futures = "0.3.30"
log = "0.4.20"
rustyline = "13.0.0"
serde_json = "1.0.108"
serde_with = "3.4.0"

[target.'cfg(unix)'.dependencies]
termion = "2.0.3"

[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = [
    "compound_policy",
    "console_appender",
    "rolling_file_appender",
    "size_trigger",
]

[dependencies.rust_decimal]
version = "1.33.1"
default-features = false
features = ["serde-with-arbitrary-precision", "serde-with-float", "maths"]

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.stock-symbol]
version = "0.4.0"
features = ["serde"]

[dependencies.time]
version = "0.3.31"
features = ["serde", "local-offset", "formatting", "serde-well-known"]

[dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["net", "rt", "sync", "time"]

[dependencies.tokio-tungstenite]
version = "0.21.0"
features = ["rustls-tls-webpki-roots"]

[dependencies.uuid]
version = "1.6.1"
features = ["serde"]
