[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
serde_json = "1.0.108"

[dependencies.rust_decimal]
version = "1.33.1"
default-features = false
features = ["serde-with-arbitrary-precision", "serde-with-float"]

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.stock-symbol]
version = "0.5.0"
features = ["serde"]

[dependencies.time]
version = "0.3.31"
features = ["serde", "serde-well-known"]

[dependencies.uuid]
version = "1.6.1"
features = ["serde"]
