[package]
name = "history"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
entity = { path = "../entity" }
rest = { path = "../rest" }
anyhow = "1.0.76"
async-trait = "0.1.75"
futures = "0.3.30"
log = "0.4.20"

[dependencies.rust_decimal]
version = "1.33.1"
default-features = false

[dependencies.sqlx]
version = "0.7.3"
features = ["runtime-tokio", "tls-rustls", "sqlite"]

[dependencies.stock-symbol]
version = "0.4.0"
features = ["sqlx"]

[dependencies.time]
version = "0.3.31"
features = []

[dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["sync"]
