[package]
name = "rest"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
entity = { path = "../entity" }
anyhow = "1.0.76"
log = "0.4.20"
serde_json = "1.0.108"

[dependencies.reqwest]
version = "0.11.23"
default-features = false
features = ["rustls-tls-webpki-roots"]

[dependencies.rust_decimal]
version = "1.33.1"
default-features = false
features = ["serde-with-arbitrary-precision"]

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.stock-symbol]
version = "0.4.0"
features = ["serde"]

[dependencies.time]
version = "0.3.31"
features = ["serde"]

[dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["time"]

[dependencies.uuid]
version = "1.6.1"
features = ["serde"]
